classDiagram
    direction TB

    class Profesor {
        nombre
        email
        fechaRegistro
    }

    class Alumno {
        nombre
        email
        fechaRegistro
    }

    class TecnicaPatron {
        nombreTecnica
        categoriaPosicion
        descripcionMetodica
        registroVideo
    }

    class MatrizEsqueletica {
        totalFotogramas
    }

    class Punto3D {
        coordenadaX
        coordenadaY
        coordenadaZ
    }

    class EvaluacionAlumno {
        esValido
        totalDesviaciones
        desviacionPromedioGrados
        fechaEvaluacion
    }

    class DesviacionArticular {
        nombreArticulacion
        anguloEsperado
        anguloReal
        desviacionGrados
    }

    class ConsejoPedagogico {
        analisisPostural
        riesgoLesion
        guiaPasoAPaso
        resumenEjecutivo
    }

    class FuenteConocimiento {
        tituloDocumento
        tipoRecurso
        pasajeTexto
        fechaCarga
    }

    %% Asociaciones puras según el estándar conceptual de Larman
    Profesor "1" -- "0..*" TecnicaPatron : Registra
    Profesor "1" -- "0..*" FuenteConocimiento : Aporta
    
    TecnicaPatron "1" -- "1" MatrizEsqueletica : Define
    MatrizEsqueletica "1" -- "17" Punto3D : Contiene

    Alumno "1" -- "0..*" EvaluacionAlumno : Realiza
    EvaluacionAlumno "0..*" -- "1" TecnicaPatron : Compara-con
    EvaluacionAlumno "1" -- "1" MatrizEsqueletica : Captura
    EvaluacionAlumno "1" -- "0..*" DesviacionArticular : Mide
    EvaluacionAlumno "1" -- "1" ConsejoPedagogico : Genera
    FuenteConocimiento "0..*" -- "0..*" ConsejoPedagogico : Sustenta
